# vector_retrieval_service

./: Makefile  pyproject.toml
src/vector_retrieval_service/: config.py
src/vector_retrieval_service/domain/: ai_models.py  factories.py  scores.py
src/vector_retrieval_service/embedding_retriever/adapters/: llm_model_adapter.py
src/vector_retrieval_service/embedding_retriever/ai_models/: model_factory.py
src/vector_retrieval_service/presenters/: dependencies.py  fastapi_app.py
src/vector_retrieval_service/presenters/routers/: iamges.py  multimodals.py  texts.py
src/vector_retrieval_service/service_api/: fastapi_app.py
src/vector_retrieval_service/service_api/services/: dtos.py  image_services.py  multimodal_services.py  text_services.py
src/vector_retrieval_service/service_api/views/: iamge_views.py  multimodal_services.py  text_views.py
src/vector_retrieval_service/services/: data_transformers.py  dtos.py  image_services.py  multimodal_services.py  text_services.py
tests/integration/: conftest.py  fakes.py  test_text_services.py
